@@ -143,7 +143,7 @@ final class FeatureQuery extends Query {
           }
 
           @Override
-          public void setTopLevelScoringClause() throws IOException {
+          public void setTopLevelScoringClause() {
             topLevelScoringClause = true;
           }
         };
